CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
MESSAGE(STATUS "lib out path: ${LIBRARY_OUTPUT_PATH}")

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/libcvector/src LIBCVECTOR_SRC)

ADD_LIBRARY(cvector SHARED ${LIBCVECTOR_SRC})
ADD_LIBRARY(cvector_static STATIC ${LIBCVECTOR_SRC})
SET_TARGET_PROPERTIES(cvector_static PROPERTIES OUTPUT_NAME "cvector")
