CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
MESSAGE(STATUS "lib out path: ${LIBRARY_OUTPUT_PATH}")

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/libhashset/src LIBHASHSET_SRC)

ADD_LIBRARY(hashset SHARED ${LIBHASHSET_SRC})
ADD_LIBRARY(hashset_static STATIC ${LIBHASHSET_SRC})
SET_TARGET_PROPERTIES(hashset_static PROPERTIES OUTPUT_NAME "hashset")
