CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
MESSAGE(STATUS "lib out path: ${LIBRARY_OUTPUT_PATH}")

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/libthreadpool/src LIBTHREADPOOL_SRC)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/libthreadpool/include")

ADD_LIBRARY(threadpool SHARED ${LIBTHREADPOOL_SRC})
ADD_LIBRARY(threadpool_static STATIC ${LIBTHREADPOOL_SRC})
SET_TARGET_PROPERTIES(threadpool_static PROPERTIES OUTPUT_NAME "threadpool")
